docs: Add inline DECISION, SECURITY, and CROSS-CUTTING annotations to ByteBufferUnmapper.java
Add 17 comment lines documenting:
- DECISION: Reflection/MethodHandle approach for deterministic MappedByteBuffer unmapping
  (vs waiting for GC), necessary due to absence of public JDK API
- DECISION: MethodHandle cached at class load time to amortize reflection lookup cost
- SECURITY: sun.misc.Unsafe access via reflection bypasses module system encapsulation,
  with risk assessment and JEP 471 migration path noted
- CROSS-CUTTING: Callers identified in storage/AbstractIndex and raft/BatchReader

Zero production code changes. All comments <=120 chars per line.